fix: internally linked task titles no longer wrap under the dropdown menu icon

--- a/assets/css/src/task_links.css
+++ b/assets/css/src/task_links.css
@@ -10,3 +10,7 @@
 .task-link-closed {
     text-decoration: line-through
 }
+
+.task-links-table-td {
+    display: flex
+}
